testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__or-different-columns.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, severity
      FROM events
      WHERE event_type = 'ERROR' OR severity > 8;
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX OR events (idx_events_type, idx_events_severity)

BYTECODE
addr  opcode        p1  p2  p3  p4                p5  comment
   0  Init           0  26   0                     0  Start at 26
   1  OpenRead       0  11   0  k(6,B,B,B,B,B,B)   0  table=events, root=11, iDb=0
   2  OpenRead       1  14   0  k(2,B)             0  index=idx_events_type, root=14, iDb=0
   3  OpenRead       2  12   0  k(2,B)             0  index=idx_events_severity, root=12, iDb=0
   4  Null           0   5   0                     0  r[5]=NULL
   5  String8        0   6   0  ERROR              0  r[6]='ERROR'
   6  Affinity       6   1   0                     0  r[6..7] = B
   7  SeekGE         1  12   6                     0  key=[6..6]
   8    IdxGT        1  12   6                     0  key=[6..6]
   9    IdxRowId     1   4   0                     0  r[4]=cursor 1 for index idx_events_type.rowid
  10    RowSetAdd    5   4   0                     0
  11  Next           1   8   0                     0
  12  Integer        8   7   0                     0  r[7]=8
  13  Affinity       7   1   0                     0  r[7..8] = D
  14  SeekGT         2  18   7                     0  key=[7..7]
  15    IdxRowId     2   4   0                     0  r[4]=cursor 2 for index idx_events_severity.rowid
  16    RowSetAdd    5   4   0                     0
  17  Next           2  15   0                     0
  18    RowSetRead   5  25   4                     0
  19    SeekRowid    0   4  20                     0  if (r[4]!=cursor 0 for table events.rowid) goto 20
  20    RowId        0   1   0                     0  r[1]=events.rowid
  21    Column       0   1   2                     0  r[2]=events.event_type
  22    Column       0   2   3                     0  r[3]=events.severity
  23    ResultRow    1   3   0                     0  output=r[1..3]
  24  Goto           0  18   0                     0
  25  Halt           0   0   0                     0
  26  Transaction    0   1  14                     0  iDb=0 tx_mode=Read
  27  Goto           0   1   0                     0
