testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__or-indexed-and-non-indexed.snap
---
source: indexes.sqltest
expression: "SELECT id, event_type, source\n    FROM events\n    WHERE event_type = 'ERROR' OR source = 'auth-service';"
info:
  statement_type: SELECT
  tables:
    - events
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
`--SCAN events

BYTECODE
addr  opcode       p1  p2  p3  p4                p5  comment
   0  Init          0  13   0                     0  Start at 13
   1  OpenRead      0  11   0  k(6,B,B,B,B,B,B)   0  table=events, root=11, iDb=0
   2  Rewind        0  12   0                     0  Rewind table events
   3    Column      0   1   5                     0  r[5]=events.event_type
   4    Eq          5   6   7  Binary             0  if r[5]==r[6] goto 7
   5    Column      0   4   8                     0  r[8]=events.source
   6    Ne          8   9  11  Binary             0  if r[8]!=r[9] goto 11
   7    RowId       0   1   0                     0  r[1]=events.rowid
   8    Column      0   1   2                     0  r[2]=events.event_type
   9    Column      0   4   3                     0  r[3]=events.source
  10    ResultRow   1   3   0                     0  output=r[1..3]
  11  Next          0   3   0                     0
  12  Halt          0   0   0                     0
  13  Transaction   0   1  14                     0  iDb=0 tx_mode=Read
  14  String8       0   6   0  ERROR              0  r[6]='ERROR'
  15  String8       0   9   0  auth-service       0  r[9]='auth-service'
  16  Goto          0   1   0                     0
