testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__or-same-column.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, severity
      FROM events
      WHERE event_type = 'ERROR' OR event_type = 'CRITICAL';
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX OR events (idx_events_type, idx_events_type)

BYTECODE
addr  opcode        p1  p2  p3  p4                p5  comment
   0  Init           0  25   0                     0  Start at 25
   1  OpenRead       0  11   0  k(6,B,B,B,B,B,B)   0  table=events, root=11, iDb=0
   2  OpenRead       1  14   0  k(2,B)             0  index=idx_events_type, root=14, iDb=0
   3  OpenRead       2  14   0  k(2,B)             0  index=idx_events_type, root=14, iDb=0
   4  Null           0   5   0                     0  r[5]=NULL
   5  String8        0   6   0  ERROR              0  r[6]='ERROR'
   6  SeekGE         1  11   6                     0  key=[6..6]
   7    IdxGT        1  11   6                     0  key=[6..6]
   8    IdxRowId     1   4   0                     0  r[4]=cursor 1 for index idx_events_type.rowid
   9    RowSetAdd    5   4   0                     0
  10  Next           1   7   0                     0
  11  String8        0   7   0  CRITICAL           0  r[7]='CRITICAL'
  12  SeekGE         1  17   7                     0  key=[7..7]
  13    IdxGT        1  17   7                     0  key=[7..7]
  14    IdxRowId     1   4   0                     0  r[4]=cursor 1 for index idx_events_type.rowid
  15    RowSetAdd    5   4   0                     0
  16  Next           1  13   0                     0
  17    RowSetRead   5  24   4                     0
  18    SeekRowid    0   4  19                     0  if (r[4]!=cursor 0 for table events.rowid) goto 19
  19    RowId        0   1   0                     0  r[1]=events.rowid
  20    Column       0   1   2                     0  r[2]=events.event_type
  21    Column       0   2   3                     0  r[3]=events.severity
  22    ResultRow    1   3   0                     0  output=r[1..3]
  23  Goto           0  17   0                     0
  24  Halt           0   0   0                     0
  25  Transaction    0   1  14                     0  iDb=0 tx_mode=Read
  26  Goto           0   1   0                     0
