testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__primary-key-lookup.snap
---
source: indexes.sqltest
expression: SELECT id, sku, name FROM products WHERE id = 42;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INTEGER PRIMARY KEY (rowid=?)
