testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__range-scan-less-than.snap
---
source: indexes.sqltest
expression: SELECT id, event_type, severity FROM events WHERE severity < 3;
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH events USING INDEX idx_events_severity (severity>=?)
